# Mirage_GIF

./: CMakeLists.txt  README.md
lib/gif_enc/src/: gif_lzw_dec.cpp
lib/image_sequence/: CMakeLists.txt
lib/image_sequence/src/: imsq_ffmpeg.cpp  imsq_gdi.cpp  imsq_webp.cpp  imsqs_ffmpeg.cpp  imsqs_webp.cpp  quant_native.cpp
lsb/: CMakeLists.txt
lsb/src/: main_dec.cpp  main_enc.cpp
